crates/monty/tests/heap_reader_compile_fail_cases/substitute_reader.stderr
error[E0521]: borrowed data escapes outside of closure
   --> crates/monty/src/../tests/heap_reader_compile_fail_cases/cases.rs:163:21
    |
156 |         let a = match reader_a.read(list_id) {
    |             - `a` declared here, outside of the closure body
...
160 |         HeapReader::with(heap_b, &mut (), |reader_b, _| {
    |                                            -------- `reader_b` is a reference that is only valid in the closure body
...
163 |             let _ = a.get(&reader_b);
    |                     ^^^^^^^^^^^^^^^^ `reader_b` escapes the closure body here
    |
    = note: requirement occurs because of the type `HeapRead<'_, list::List>`, which makes the generic argument `'_` invariant
    = note: the struct `HeapRead<'a, T>` is invariant over the parameter `'a`
    = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
error[E0521]: borrowed data escapes outside of closure
   --> crates/monty/src/../tests/heap_reader_compile_fail_cases/cases.rs:163:21
    |
155 |     HeapReader::with(heap_a, &mut (), |reader_a, _| {
    |                                        --------
    |                                        |
    |                                        `reader_a` is a reference that is only valid in the closure body
    |                                        has type `heap::HeapReader<'1, impl ResourceTracker>`
...
163 |             let _ = a.get(&reader_b);
    |                     ^^^^^^^^^^^^^^^^
    |                     |
    |                     `reader_a` escapes the closure body here
    |                     argument requires that `'1` must outlive `'static`
For more information about this error, try `rustc --explain E0521`.
